<resources>
    <string name="app_name">WhereYou</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login.button.forgot">Forgot Password?</string>
    <string name="placeholder_message">Type a message&#8230;</string>
    <string name="facebook_login">Login with facebook</string>
    <string name="google_login">Login with Google</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="permission_read_ext_storage_denied">Read external storage permission was denied. Please consider granting it in order to upload image!</string>
    <string name="permission_read_ext_storage_never_askagain">Read external storage permission was denied with never ask again.</string>
    <string name="permission_read_ext_storage_rationale">Read external storage permission is needed to show the select images.</string>

    <string name="permission_write_ext_storage_denied">Write external storage permission was denied. Please consider granting it in order to download files!</string>
    <string name="permission_write_ext_storage_never_askagain">Write external storage permission was denied with never ask again.</string>
    <string name="permission_write_ext_storage_rationale">Write external storage permission is needed to show the download files.</string>

    <string name="permission_read_contact_denied">Read contacts permission was denied. Please consider granting it in order to send contact information!</string>
    <string name="permission_read_contact_never_askagain">Read contacts permission was denied with never ask again.</string>
    <string name="permission_read_contact_rationale">Read contacts permission is needed to send contact information.</string>

    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
</resources>
